testsuite/poke.pkl/attr-offset-diag-4.pk
/* { dg-do compile } */

type t=struct{int8[
   8'offset /* { dg-error "not defined" } */
];};
